Squashed commit of the following:
commit b7134301cf58a123b6875d0c84df636ca7187e78
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Fri Jan 22 08:46:15 2021 -0800

    Temporarily disable sccache for CI integration test.

commit 5e6c40e43addf41af94192923e3a7a090982561d
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Fri Jan 22 07:17:24 2021 -0800

    Expand on test/docker-compose-with-error.sh usage info and add missing
    check for required param.

commit 3d4a408923ff3d0ab46589a844967e57ecaae49f
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Fri Jan 22 06:35:53 2021 -0800

    Remove path no longer used from .gitignore.

commit d0014a2aebeeef7e0c3a7748e321b8c3d46dce65
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Fri Jan 22 06:30:27 2021 -0800

    Revert "Run cypress tests and 'node' user, not root."

    I now recall being here before.

    This reverts commit 3dc5e253f1114f6c548864d35f745645d74e6f36.

commit 3dc5e253f1114f6c548864d35f745645d74e6f36
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Thu Jan 21 18:05:44 2021 -0800

    Run cypress tests and 'node' user, not root.

commit 7f766ab9305593ed7b8caf5df13af4c166a4ba9c
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Thu Jan 21 18:04:58 2021 -0800

    restore original service names to docker-compose.yml

commit 62fe93b46c141d1ed4446f4f1e4bff0d8342bbe7
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Thu Jan 21 18:04:27 2021 -0800

    Format new text in BUILDING.md

commit c54baa22b75c11964193193439ae9e51cd44c5e9
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Thu Jan 21 18:04:01 2021 -0800

    Re-add environment variables to e2e tests in CI.

commit c2eef8d80c32627928ffb9b51344942b3f8159f1
Author: inickles-grapl <inickles@graplsecurity.com>
Date:   Thu Jan 21 17:06:05 2021 -0800

    Initial pass at updating documentation of changes made in this PR to
    BUILDING.md and CONTRIBUTING.md.

commit 3fdfb4b774f805

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Rust unit tests
         run: |
-          SCCACHE_LOCATION=none make test-unit-rust
+          make test-unit-rust
 
   python-unit-tests:
     runs-on: ubuntu-latest
@@ -61,9 +61,9 @@ jobs:
           ./etc/ci_scripts/clean_gh_actions_space.sh
           ./etc/ci_scripts/install_requirements.sh
 
-      - name: Run dobi python-typecheck
+      - name: Run python-typecheck
         run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux python-typecheck
+          make test-typecheck
 
   js-unit-tests:
     runs-on: ubuntu-latest
@@ -93,10 +93,11 @@ jobs:
 
       - name: Run integration tests
         run: |
-          SCCACHE_LOCATION=none make test-integration
+          echo "unset RUSTC_WRAPPER" > rust_env.sh
+          GRAPL_RUST_ENV_FILE=rust_env.sh make test-integration
 
 
-  # In the future, this should probably be merged back into `dobi integration-tests`, but
+  # In the future, this should probably be merged back into the integration tests, but
   # since it's so timing-dependent I'm going to treat it separately until it stabilizes a bit.
   FLAKY-end-to-end-tests:
     runs-on: ubuntu-latest
@@ -118,24 +119,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Build Grapl
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
-
-      # --no-bind-mount makes dobi screw up with volumes for some reason, and it's not really required here anyway.
       - name: Run end-to-end tests
         run: |
-          GRAPL_RELEASE_TARGET=debug \
-          GRAPL_LOG_LEVEL=DEBUG \
+          GRAPL_LOG_LEVEL=debug \
           DUMP_ARTIFACTS=True \
-          TAG=latest \
-          ./dobi-linux run-e2e-tests
-       
+          make test-e2e
+
       # NOTE: This requires >= py37
       - name: 'Collect e2e test artifacts'
         if: ${{ always() }}
         run: |
-          python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-integration-tests"
+          python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-integration_tests"
            
       - name: 'Upload e2e test artifacts'
         if: ${{ always() }}
