--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,11 @@ services:
 
   grapl-metric-forwarder:
     image: grapl/grapl-metric-forwarder:${TAG:-latest}
+    build:
+      context: src/rust
+      target: metric-forwarder-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
       - "IS_LOCAL=True"
@@ -125,6 +130,11 @@ services:
 
   grapl-sysmon-subgraph-generator:
     image: grapl/grapl-sysmon-subgraph-generator:${TAG:-latest}
+    build:
+      context: src/rust
+      target: sysmon-subgraph-generator-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
       - RUST_LOG=${RUST_LOG:-ERROR}
@@ -155,6 +165,11 @@ services:
 
   grapl-osquery-subgraph-generator:
     image: grapl/grapl-osquery-subgraph-generator:${TAG:-latest}
+    build:
+      context: src/rust
+      target: osquery-subgraph-generator-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -185,6 +200,11 @@ services:
 
   grapl-node-identifier:
     image: grapl/grapl-node-identifier:${TAG:-latest}
+    build:
+      context: src/rust
+      target: node-identifier-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     environment:
 
       - RUST_LOG=${RUST_LOG:-ERROR}
@@ -229,6 +249,11 @@ services:
 
   grapl-node-identifier-retry-handler:
     image: grapl/grapl-node-identifier-retry-handler:${TAG:-latest}
+    build:
+      context: src/rust
+      target: node-identifier-retry-handler-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     environment:
       - RUST_LOG=${RUST_LOG:-ERROR}
       - "IS_LOCAL=True"
@@ -273,6 +298,11 @@ services:
 
   grapl-graph-merger:
     image: grapl/grapl-graph-merger:${TAG:-latest}
+    build:
+      context: src/rust
+      target: graph-merger-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     environment:
       - RUST_LOG=${RUST_LOG:-ERROR}
       - "EVENT_CACHE_CLUSTER_ADDRESS=dev-shared-redis:6379"
@@ -309,6 +339,11 @@ services:
 
   grapl-analyzer-dispatcher:
     image: grapl/grapl-analyzer-dispatcher:${TAG:-latest}
+    build:
+      context: src/rust
+      target: analyzer-dispatcher-deploy
+      args:
+        - PROFILE=${PROFILE:-debug}
     environment:
       - "ANALYZERS_BUCKET=local-grapl-analyzers-bucket"
       - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-dispatcher-queue"
@@ -364,6 +399,10 @@ services:
 
   grapl-analyzer-executor:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: analyzer-executor-deploy
     command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/src/run_local.py'
     environment:
       - DEBUG_SERVICES=${DEBUG_SERVICES}
@@ -393,6 +432,10 @@ services:
 
   grapl-engagement-creator:
     image: grapl/grapl-engagement-creator:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: engagement-creator-deploy
     command: /bin/sh -c '. venv/bin/activate && python3 engagement-creator/src/engagement-creator.py'
     environment:
       - "IS_LOCAL=True"
@@ -411,9 +454,13 @@ services:
 
   grapl-engagement-edge:
     image: grapl/grapl-engagement-edge:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: engagement-edge-deploy
     command: |
       /bin/sh -c '
-        wait-for-it grapl-provision:8126 --timeout=45 &&
+        wait-for-it grapl-provision:8126 --timeout=120 &&
         . venv/bin/activate &&
         cd /home/grapl/app &&
         chalice local --no-autoreload --host=0.0.0.0 --port=8900
@@ -428,7 +475,6 @@ services:
       - "BUCKET_PREFIX=local-grapl"
     depends_on:
       - grapl-provision
-
     tty: true
     links:
       - grapl-master-graph-db:master_graph
@@ -436,6 +482,10 @@ services:
 
   grapl-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: model-plugin-deployer-deploy
     command: /bin/sh -c '. venv/bin/activate && cd /home/grapl/app && chalice local --no-autoreload --host=0.0.0.0 --port=8123'
     ports:
       - "8123:8123"
@@ -457,6 +507,10 @@ services:
 
   grapl-dgraph-ttl:
     image: grapl/grapl-dgraph-ttl:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: dgraph-ttl-deploy
     command: /bin/sh -c '. venv/bin/activate && cd /home/grapl/app && chalice local --no-autoreload --host=0.0.0.0 --port=8124'
     ports:
       - "8124:8124"
@@ -477,7 +531,9 @@ services:
   #
 
   grapl-engagement-view:
-    image: grapl/grapl-engagement-view:${TAG:-latest}
+    image: syntaqx/serve
+    volumes:
+      - ./src/js/grapl-cdk/edge_ux_pre_replace:/var/www:ro
     command: "serve -dir /var/www"
     environment:
       - PORT=1234
@@ -486,6 +542,10 @@ services:
 
   grapl-graphql-endpoint:
     image: grapl/grapl-graphql-endpoint:${TAG:-latest}
+    build: 
+      context: src/js/graphql_endpoint
+      dockerfile: Dockerfile
+      target: graphql-endpoint-deploy
     command: yarn start server
     environment:
       - MG_ALPHAS=master_graph:9080
@@ -500,6 +560,11 @@ services:
 
   grapl-notebook:
     image: grapl/grapl-notebook:${TAG:-latest}
+    build: 
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: grapl-notebook
+    user: grapl
     environment:
       - MG_ALPHAS=master_graph:9080
     links:
@@ -513,6 +578,10 @@ services:
 
   grapl-provision:
     image: grapl/grapl-provision:${TAG:-latest}
+    build: 
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: grapl-provision
     command: |
       /bin/bash -c "
         # it doesn't seem to like waiting for sqs
