--- a/src/python/Dockerfile
+++ b/src/python/Dockerfile
@@ -8,7 +8,6 @@ SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get -y install --no-install-recommends \
         build-essential \
-        musl-dev \
         protobuf-compiler \
         wait-for-it \
         zip \
@@ -32,8 +31,6 @@ RUN python3 -mvenv venv && \
     source venv/bin/activate && \
     pip install --upgrade pip && \
     pip install wheel grpcio chalice hypothesis pytest pytest-xdist
-
-# CMD :
 
 #
 # base deploy
@@ -63,8 +60,6 @@ RUN python3 -mvenv venv && \
     source venv/bin/activate && \
     pip install --upgrade pip
 
-# CMD :
-
 #
 # test deps
 #
@@ -74,6 +69,8 @@ FROM grapl-python-build AS python-test-deps
 COPY --chown=grapl python/python_test_deps python_test_deps
 
 RUN python_test_deps/download_requirements.sh
+
+
 
 #
 # graph-descriptions
@@ -96,10 +93,6 @@ FROM graph-descriptions-build AS graph-descriptions-test
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-## Run unit tests
-CMD source venv/bin/activate && \
-    cd graph-descriptions && \
-    py.test -n auto -m "not integration_test"
 
 #
 # grapl-common
@@ -122,10 +115,6 @@ FROM grapl-common-build AS grapl-common-test
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-## Run unit tests
-CMD source venv/bin/activate && \
-    cd grapl-common/tests && \
-    py.test -n auto -m "not integration_test"
 
 #
 # grapl_analyzerlib
@@ -156,10 +145,6 @@ FROM grapl-analyzerlib-build AS grapl-analyzerlib-test
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-## Run unit tests
-CMD source venv/bin/activate && \
-    cd grapl_analyzerlib && \
-    py.test -n auto -m "not integration_test"
 
 #
 # analyzer-executor
@@ -203,11 +188,6 @@ ENV IS_RETRY=False
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-## Run unit tests
-CMD source venv/bin/activate && \
-    cd analyzer_executor && \
-    export PYTHONPATH="${PYTHONPATH}:$(pwd)/src" && \
-    py.test -n auto -m "not integration_test"
 
 #
 # engagement-creator
@@ -252,10 +232,6 @@ RUN source venv/bin/activate && \
     cd engagement-creator && \
     pip install .[typecheck]
 
-## Run unit tests
-CMD source venv/bin/activate && \
-    cd engagement-creator && \
-    py.test -n auto -m "not integration_test"
 
 #
 # engagement-edge
@@ -311,9 +287,6 @@ RUN source venv/bin/activate && \
     cd grapl-tests-common && \
     pip install .
 
-CMD source venv/bin/activate && \
-    cd engagement_edge && \
-    py.test -n auto -m "not integration_test"
 
 
 #
@@ -395,9 +368,6 @@ FROM dgraph-ttl-build AS dgraph-ttl-test
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-CMD source venv/bin/activate && \
-    cd dgraph-ttl && \
-    py.test -n auto -m "not integration_test"
 
 #
 # model-plugin-deployer
@@ -443,9 +413,6 @@ FROM model-plugin-deployer-build AS model-plugin-deployer-test
 COPY --chown=grapl --from=python-test-deps /home/grapl/python_test_deps python_test_deps
 RUN python_test_deps/install_requirements.sh
 
-CMD source venv/bin/activate && \
-    cd model-plugin-deployer && \
-    py.test -n auto -m "not integration_test"
 
 #
 # swarm-lifecycle-event-handler
@@ -487,8 +454,7 @@ CMD :
 #
 
 # build
-# FROM grapl-python-build AS grapl-notebook
-FROM grapl-python-deploy AS grapl-notebook
+FROM grapl-python-build AS grapl-notebook
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 EXPOSE 8888
@@ -517,14 +483,7 @@ FROM grapl-notebook AS grapl-notebook-test
 RUN source venv/bin/activate && \
     pip install nbqa mypy boto3-stubs[essential]
 
-CMD source venv/bin/activate && \
-    cd grapl-notebook && \
-    nbqa mypy Demo_Engagement.ipynb && \
-    cd /grapl-etc && \
-    nbqa mypy "Grapl Provision.ipynb"
 
-# While the grapl provision notebook technically has nothing to do with grapl-notebook,
-# I've arbitrarily decided to make this the generalized "check the quality of ipynbs" image.
 
 #
 # Local provision
@@ -535,3 +494,35 @@ FROM grapl-python-build AS grapl-provision
 
 COPY --chown=grapl python/grapl_provision grapl_local_provision
 COPY --chown=grapl --from=grapl-analyzerlib-build /home/grapl/venv venv
+
+#
+# grapl-tests-common-build
+#
+FROM grapl-python-build AS grapl-tests-common-build
+
+COPY --chown=grapl --from=grapl-analyzerlib-build /home/grapl/venv venv
+COPY --from=python-test-deps /home/grapl/python_test_deps python_test_deps
+
+RUN python_test_deps/install_requirements.sh
+
+COPY --chown=grapl python/grapl-tests-common grapl-tests-common
+RUN source venv/bin/activate && \
+    cd grapl-tests-common && \
+    pip install . && \
+    python setup.py sdist bdist_wheel
+
+
+#
+# E2E tests
+#
+FROM grapl-tests-common-build AS grapl-e2e-tests-build
+
+COPY --chown=grapl python/grapl_e2e_tests grapl_e2e_tests
+
+# Allow user `grapl` to write to the mount point
+USER root
+RUN mkdir /mnt/dynamodb_dump && chown grapl /mnt/dynamodb_dump
+USER grapl
+
+RUN source venv/bin/activate && \
+    pip install zstd
