Fix up some of the tests

--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -16,6 +16,8 @@ RUN npm install
 
 # Copy in the rest of the source
 COPY . .
+COPY ../../rust .
+
 # does typechecking, which is nice
 RUN npm run build
 
