--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /grapl
 
 # install deps as separate steps to leverage build cache
 COPY package.json package.json
-COPY package-lock.json package-lock.json
-# COPY yarn.lock yarn.lock
-RUN npm install
+#COPY package-lock.json package-lock.json
+COPY yarn.lock yarn.lock
+RUN yarn install
 
 # now copy all sources
 COPY . .
@@ -18,7 +18,7 @@ COPY . .
 FROM engagement-view-deps AS engagement-view-build
 
 # build sources
-RUN npm build
+RUN yarn build
 
 
 #
