Start converting nodes over to new system, change uid type to int

--- a/src/rust/endpoint-plugin/Cargo.toml
+++ b/src/rust/endpoint-plugin/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 grapl-graph-descriptions = { path="../graph-descriptions", version="*" }
 derive-dynamic-node = { path="../derive-dynamic-node" }
 uuid = "0.8.2"
+thiserror = "1.0.23"
