--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
+endpoint-plugin = {path="../../endpoint-plugin"}
 grapl-config = { path = "../../grapl-config", version="*" }
 grapl-observe = { path = "../../grapl-observe", version="*" }
 graph-generator-lib = { path="../graph-generator-lib", version="*" }
