--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,18 +59,6 @@ services:
     logging:
       driver: none
 
-
-  sqs:
-    image: localstack/localstack:0.11.5
-    environment:
-      - SERVICES=apigateway:4567
-      - HOSTNAME_EXTERNAL=localgrapl
-      - IMAGE_NAME=localstack/localstack:0.11.5
-    ports:
-      - "4567:4567"
-    logging:
-      driver: none
-
   secretsmanager:
     image: localstack/localstack:0.11.5
     environment:
@@ -178,6 +166,7 @@ services:
       - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-osquery-graph-generator-queue"
       - "RETRY_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-osquery-graph-generator-retry-queue"
       - RUST_LOG=${RUST_LOG:-ERROR}
+      - "EVENT_CACHE_CLUSTER_ADDRESS=dev-shared-redis:6379"
       - "DEST_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-queue"
       - "DEST_BUCKET_NAME=local-grapl-unid-subgraphs-generated-bucket"
       - "SQS_ENDPOINT=http://sqs.us-east-1.amazonaws.com:9324"
@@ -352,6 +341,8 @@ services:
       - "DEST_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
       - "DEST_BUCKET_NAME=local-grapl-analyzer-dispatched-bucket"
       - "ANALYZER_BUCKET=local-grapl-analyzers-bucket"
+      - "AWS_REGION=us-east-1"
+      - "AWS_DEFAULT_REGION=us-east-1"
       - "SQS_ENDPOINT=http://sqs.us-east-1.amazonaws.com:9324"
       - "SQS_ACCESS_KEY_ID=dummy_cred_aws_access_key_id"
       - "SQS_ACCESS_KEY_SECRET=dummy_cred_aws_secret_access_key"
@@ -414,6 +405,8 @@ services:
       - GRPC_ENABLE_FORK_SUPPORT=1
       - MG_ALPHAS=master_graph:9080
       - "IS_RETRY=False"
+      - "AWS_REGION=us-east-1"
+      - "AWS_DEFAULT_REGION=us-east-1"
       - "BUCKET_PREFIX=local-grapl"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
       - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
