Rename 'target' to 'stage' in Rust dockerfile; fix Grapl Log Level to all-caps; make e2e tests stop instead of down

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -121,7 +121,7 @@ jobs:
 
       - name: Run end-to-end tests
         run: |
-          GRAPL_LOG_LEVEL=debug \
+          GRAPL_LOG_LEVEL=DEBUG \
           DUMP_ARTIFACTS=True \
           make test-e2e
 
