--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -26,7 +26,7 @@ COPY . .
 #
 # build
 #
-# the `base` target isn't used by the build system, but let's 
+# the `base` stage isn't used by the build system, but let's 
 # make `base` and `build` in case it becomes convenient.
 FROM base AS build
 
@@ -45,7 +45,7 @@ RUN --mount=type=cache,mode=0777,target=/root/.cache/sccache \
 
 
 #
-# build test targets
+# build test stages
 #
 FROM build AS build-test-unit
 
