Put the project name in the integ-tests and e2e-tests

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -129,7 +129,7 @@ jobs:
       - name: 'Collect e2e test artifacts'
         if: ${{ always() }}
         run: |
-          python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-integration_tests"
+          python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-e2e_tests"
            
       - name: 'Upload e2e test artifacts'
         if: ${{ always() }}
