add missing ux-router-latest.zip from CDK Dockerfile for tests.

--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -49,6 +49,7 @@ RUN touch \
   node-identifier-retry-handler-latest.zip \
   osquery-subgraph-generator-latest.zip \
   swarm-lifecycle-event-handler-latest.zip \
-  sysmon-subgraph-generator-latest.zip
+  sysmon-subgraph-generator-latest.zip \
+  ux-router-latest.zip
 
 WORKDIR /home/grapl/src/js/grapl-cdk
