Increased timeout in Grapl Provision; increase default log level for grapl-provision

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -515,13 +515,14 @@ services:
       target: grapl-provision
     command: |
       /bin/bash -c "
+        export TIMEOUT=35 &&
         # it doesn't seem to like waiting for sqs
         # wait-for-it sqs:9324 &&
-        wait-for-it secretsmanager:4584 &&
-        wait-for-it s3:9000 &&
-        wait-for-it dynamodb:8000 &&
-        wait-for-it grapl-master-graph-db:8080 &&
-        wait-for-it grapl-engagement-view:1234 &&
+        wait-for-it s3:9000 --timeout=$$TIMEOUT &&
+        wait-for-it dynamodb:8000 --timeout=$$TIMEOUT &&
+        wait-for-it grapl-master-graph-db:8080 --timeout=$$TIMEOUT &&
+        wait-for-it grapl-engagement-view:1234 --timeout=$$TIMEOUT &&
+        wait-for-it secretsmanager:4584 --timeout=$$TIMEOUT &&
         . venv/bin/activate && 
         python /home/grapl/grapl_local_provision/provision_local_identity_table.py &&
         python /home/grapl/grapl_local_provision/grapl_provision.py &&
@@ -529,7 +530,7 @@ services:
         python -m http.server 8126
       "
     environment:
-      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
       - MG_ALPHAS=master_graph:9080
     tty: true
     ports:
