Upload local when we run

--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -19,13 +19,5 @@ FROM engagement-view-deps AS engagement-view-build
 # build sources
 RUN yarn build
 
-
-#
-# deploy
-#
-FROM syntaqx/serve AS grapl-engagement-view
-
-COPY --from=engagement-view-build /grapl/build/ /var/www
-
 # no-op the base image cmd, so it doesn't launch a Node repl
-CMD :
+CMD upload_local.sh
